Rework solar launcher to simply return module path arguments